fix alignment in firefox

--- a/src/select.css
+++ b/src/select.css
@@ -38,6 +38,7 @@
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
+	float: left;
 }
 
 .cp-select__icon {
